--- a/Table.Rmd
+++ b/Table.Rmd
@@ -50,3 +50,145 @@ park_ornot1 <- park_ornot %>%
 
 kable(park_ornot1,caption = "Percentage Sumary")
 ```
+
+
+## function
+```{r}
+
+
+
+single_table <- function(md){
+mt <- tibble(md)
+ans <- mt %>% count(md)%>%arrange() %>% mutate(propotion = n / sum(n))
+return(ans)
+}
+
+#test on park
+single_table(health$park_1920)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
